--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Reboot Login</title>
+  <title>Login</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
+  <h1>Login</h1>
   <form id="login-form">
-    <input type="text" id="username" placeholder="Username or Email" />
-    <input type="password" id="password" placeholder="Password" />
+    <input type="text" id="username" placeholder="Username or Email" required />
+    <input type="password" id="password" placeholder="Password" required />
     <button type="submit">Login</button>
   </form>
-
+  <p id="error-msg"></p>
   <script src="js/auth.js"></script>
 </body>
 </html>
