--- a/index.html
+++ b/index.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Login</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>GraphQL Profile</title>
+
+  <link rel="icon" type="image/png" href="css/GraphQL_Logo.png">
+  <link rel="stylesheet" href="../css/styles.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap" rel="stylesheet">
+  <style>
+    body { font-family: Helvetica, sans-serif; padding: 2em; }
+    .hidden { display: none; }
+    .error { color: red; }
+  </style>
 </head>
+
 <body>
-  <h1>Login</h1>
-  <form id="login-form">
-    <input type="text" id="username" placeholder="Username or Email" required />
-    <input type="password" id="password" placeholder="Password" required />
-    <button type="submit">Login</button>
-  </form>
-  <p id="error-msg"></p>
-  <script src="js/auth.js"></script>
+  <header id="header"></header>
+  <main id="main"></main>
+  <footer id="footer"></footer>
+
+  <!-- Core layout scripts -->
+  <script type="module" src="js/header.js"></script>
+  <script type="module" src="js/body.js"></script>
+  <script type="module" src="js/footer.js"></script>
 </body>
 </html>
