--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>GraphQL Profile</title>
 
   <link rel="icon" type="image/png" href="css/GraphQL_Logo.png">
-  <link rel="stylesheet" href="../css/styles.css" />
+  <link rel="stylesheet" href="css/styles.css" />
+  <script src="https://d3js.org/d3.v7.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap" rel="stylesheet">
   <style>
     body { font-family: Helvetica, sans-serif; padding: 2em; }
@@ -24,5 +25,8 @@
   <script type="module" src="js/header.js"></script>
   <script type="module" src="js/body.js"></script>
   <script type="module" src="js/footer.js"></script>
+  <script type="module" src="js/auth.js"></script>
+  <script type="module" src="js/graphql.js"></script>
+  <script type="module" src="js/graphs.js"></script>
 </body>
 </html>
